workspaces/kubernetes-native-dxp/k8s/custom-rest-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-rest-service
  labels:
    app: custom-rest-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-rest-service
  template:
    metadata:
      labels:
        app: custom-rest-service
    spec:
      containers:
      - name: custom-rest-service
        image: custom-rest-service
        imagePullPolicy: Never
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
        - containerPort: 8000
