workspaces/kubernetes-native-dxp/k8s/custom-rest-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-rest-service
spec:
  selector:
    app: custom-rest-service
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
