workspaces/kubernetes-native-dxp/k8s/custom-rest-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-rest-service-localhost
spec:
  ingressClassName: nginx
  rules:
  - host: custom-rest-service.localdev.me
    http:
      paths:
      - backend:
          service:
            name: custom-rest-service
            port:
              number: 80
        path: /
        pathType: Prefix
